@@ -10,6 +10,7 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Service class for character controller.
@@ -43,7 +44,7 @@ public class CharacterService {
      * @see Character
      */
     public Character findById(Long id) {
-        return characterRepository.findById(id).map(e -> characterDtoToCharacter.characterDtoToCharacter(e))
+        return characterRepository.findById(id).map(characterDtoToCharacter::characterDtoToCharacter)
                 .orElseThrow(CharacterNotFoundException::new);
     }
 
@@ -67,12 +68,13 @@ public class CharacterService {
      * @see List
      */
     public List<Character> getAllCharacters() {
-        List<Character> characterList = characterRepository.findAll().stream()
+
+        return characterRepository.findAll().stream()
                 .map(e -> characterDtoToCharacter.characterDtoToCharacter(e))
-                .toList();
-        if (characterList.size() > 0) {
-            return characterList;
-        } else throw new CharacterNotFoundException();
+                .collect(Collectors.collectingAndThen(Collectors.toList(), result -> {
+                    if (result.isEmpty()) throw new CharacterNotFoundException();
+                    return result;
+                }));
     }
 
     /**
@@ -85,7 +87,7 @@ public class CharacterService {
      * @see Character
      */
     public Character getByName(String name) {
-        return characterRepository.findByName(name).map(e -> characterDtoToCharacter.characterDtoToCharacter(e))
+        return characterRepository.findByName(name).map(characterDtoToCharacter::characterDtoToCharacter)
                 .orElseThrow(CharacterNotFoundException::new);
     }
 
@@ -98,12 +100,12 @@ public class CharacterService {
      * @see List
      */
     public List<Character> getAllCharactersByLocation(Character.BirthplaceEnum birthplaceEnum) {
-        List<Character> characterList = characterRepository.findByBirthplace(Birthplace.birthplaceToBirthplaceDto(birthplaceEnum))
-                .stream().map((e -> characterDtoToCharacter.characterDtoToCharacter(e)))
-                .toList();
-        if (characterList.size() > 0) {
-            return characterList;
-        } else throw new CharacterNotFoundException();
+        return characterRepository.findByBirthplace(Birthplace.valueOf(birthplaceEnum.getValue()))
+                .stream().map((characterDtoToCharacter::characterDtoToCharacter))
+                .collect(Collectors.collectingAndThen(Collectors.toList(), result -> {
+                    if (result.isEmpty()) throw new CharacterNotFoundException();
+                    return result;
+                }));
     }
 
     /**
@@ -116,12 +118,12 @@ public class CharacterService {
      * @see List
      */
     public List<Character> getAllCharactersByElement(Character.ElementEnum elementEnum) {
-        List<Character> characterList = characterRepository.findByElement(Element.elementToElementDto(elementEnum)).stream()
-                .map((e -> characterDtoToCharacter.characterDtoToCharacter(e)))
-                .toList();
-        if (characterList.size() > 0) {
-            return characterList;
-        } else throw new CharacterNotFoundException();
+        return characterRepository.findByElement(Element.valueOf(elementEnum.getValue())).stream()
+                .map((characterDtoToCharacter::characterDtoToCharacter))
+                .collect(Collectors.collectingAndThen(Collectors.toList(), result -> {
+                    if (result.isEmpty()) throw new CharacterNotFoundException();
+                    return result;
+                }));
     }
 
     /**
@@ -131,13 +133,16 @@ public class CharacterService {
      * @param id        the character ID
      * @param character modified Character object
      */
+
+
     public Character update(Long id, Character character) {
-        gicha.model.character.Character existingCharacter = characterRepository.findById(id)
-                .orElseThrow(CharacterNotFoundException::new);
-        existingCharacter.setName(character.getName());
-        existingCharacter.setBirthplace(Birthplace.birthplaceToBirthplaceDto(character.getBirthplace()));
-        existingCharacter.setElement(Element.elementToElementDto(character.getElement()));
-        return characterDtoToCharacter.characterDtoToCharacter(existingCharacter);
+        return characterRepository.findById(id)
+            .map(existingCharacter -> {
+                gicha.model.character.Character updatedCharacter = characterDtoToCharacter.characterToCharacterDto(character);
+                characterRepository.save(updatedCharacter);
+                return characterDtoToCharacter.characterDtoToCharacter(updatedCharacter);
+            })
+            .orElseThrow(CharacterNotFoundException::new);
     }
 
     /**
